unpackaged/main/default/objects/Histoire_de_vie__c/Histoire_de_vie__c.object-meta.xml
<CustomObject>
    <label>Histoire de vie</label>
    <nameField>
        <displayFormat>HV-{00000000}</displayFormat>
        <label>Nom de Histoire de vie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Histoires de vie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>