unpackaged/main/default/objects/Histoire_de_vie__c/fields/Date_histoire_de_vie__c.field-meta.xml
<CustomField>
    <fullName>Date_histoire_de_vie__c</fullName>
    <label>Date histoire de vie</label>
    <type>Date</type>
</CustomField>