unpackaged/main/default/objects/Histoire_de_vie__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Histoires de vie</relationshipLabel>
    <relationshipName>Histoires_de_vie</relationshipName>
    <type>Lookup</type>
</CustomField>