unpackaged/main/default/objects/Histoire_de_vie__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Histoires de vie</relationshipLabel>
    <relationshipName>Histoires_de_vie</relationshipName>
    <type>Lookup</type>
</CustomField>