unpackaged/main/default/objects/Histoire_de_vie__c/fields/Histoire_de_vie__c.field-meta.xml
<CustomField>
    <fullName>Histoire_de_vie__c</fullName>
    <label>Histoire de vie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>