unpackaged/main/default/objects/Histoire_de_vie__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Histoires de vie</relationshipLabel>
    <relationshipName>Histoires_de_vie</relationshipName>
    <type>Lookup</type>
</CustomField>